--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,23 @@
 .background{
-  background-color: blue;
+  background-color: rgb(0, 129, 234);
   width: 100%;
-  height: 100vh;
-  padding: 5% 0px;
+  padding: 20px 0px;
+}
+
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
