--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   background-color: rgb(0, 129, 234);
   width: 100%;
   padding: 20px 0px;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .poppins-regular {
