removing fonts for improving seo

--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,13 @@
 }
 
 .poppins-regular {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
 .poppins-medium {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   font-weight: 500;
   font-style: normal;
 }
@@ -36,7 +36,7 @@
 }
 
 .poppins-bold {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   font-weight: 700;
   font-style: normal;
 }
