--- a/src/css/ProfileSection.css
+++ b/src/css/ProfileSection.css
@@ -11,18 +11,18 @@
   
   .profile-name {
     margin: 5px 0px 5px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Trebuchet MS', sans-serif;
     font-weight: bold;
   }
   
   .profile-userId {
     margin: 0px 0px 35px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Trebuchet MS', sans-serif;
     font-weight: medium;
   }
   
   .profile-description {
     margin: 3px 0px 10px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Trebuchet MS', sans-serif;
     font-weight: bold;
   }
